--- a/assignment3/src/index.css
+++ b/assignment3/src/index.css
@@ -4,10 +4,21 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; 
+  background-color:rgb(204, 232, 244);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.hotel{
+  /* background-image: url("./component/UserPanel/hotel2.jpg");
+  /* opacity: 0.5; */
+  /* max-width: 100%;
+  height: auto; */ 
+  background-color:rgb(204, 232, 244);
+
+  
 }
